# TreesEverywhere

./: .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  manage.py  pyproject.toml  requirements.txt  settings.toml
.devcontainer/: devcontainer.json  docker-compose.yml
apps/api/: serializers.py  urls.py  views.py
apps/tree/: admin.py  apps.py  forms.py  models.py  tests.py
apps/tree/locale/pt_BR/LC_MESSAGES/: django.po
apps/tree/migrations/: 0001_initial.py  0002_location_alter_plantedtree_options_and_more.py  0003_alter_location_options_alter_plantedtree_options_and_more.py
apps/tree/services/: plant_tree.py  tree.py
apps/user/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/user/locale/pt_BR/LC_MESSAGES/: django.po
apps/user/migrations/: 0001_initial.py  0002_account_profile_newuser_account_newuser_profile.py  0003_remove_newuser_profile_profile_user_and_more.py  0004_alter_account_options_alter_profile_options.py  0005_alter_account_options_alter_profile_options.py
apps/user/templates/dashboard/: index.html
apps/user/templates/dashboard/plant/: create.html
apps/user/templates/login/: index.html
apps/user/templates/partials/: _table.html
everywhere/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/partials/: _header.html  _tailwindcss.html
